# altiplano

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  KILO_INSTRUCTIONS.md  LICENSE  README.md  TASKS.md  pyproject.toml
.agents/skills/adapt-to-project/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/create-prd/: SKILL.md
.agents/skills/create-rules/: SKILL.md
.agents/skills/document/: SKILL.md
.agents/skills/execute/: SKILL.md
.agents/skills/init-project/: SKILL.md
.agents/skills/integrate-feature-plan-review/: SKILL.md
.agents/skills/integrate-prd-review/: SKILL.md
.agents/skills/plan-feature/: SKILL.md
.agents/skills/prime/: SKILL.md
.agents/skills/reflect-rules/: SKILL.md
.agents/skills/review-feature-plan/: SKILL.md
.agents/skills/review-prd/: SKILL.md
.agents/skills/update-feature-plan/: SKILL.md
.agents/skills/update-prd/: SKILL.md
deploy/: .env.example  docker-compose.yml
docs/: INDEX.md
docs/project/architecture/: altiplano_vikunja_mcp_prd_briefing.md  vikunja_label_system.md
docs/project/operations/: docker-operations.md  llm-client-setup.md
docs/project/prd-reviews/: vikunja-mcp-server-v001-r01-integration.md  vikunja-mcp-server-v001-r01-review.md
docs/project/prd-updates/: vikunja-mcp-server-v003-to-v004-update.md  vikunja-mcp-server-v005-to-v006-update.md  vikunja-mcp-server-v006-to-v007-update.md  vikunja-mcp-server-v007-to-v008-update.md  (+4 more)
docs/starter-kit-usage/: GETTING_STARTED.md  MCP_LOCAL_SETUP.md  PIV-WORKFLOW.md  TESTING.md
src/altiplano/: server.py
tests/: test_server.py
(+75 files in other folders)
