[project]
name = "altiplano"
version = "0.3.0"
description = "Minimal MCP server for Vikunja (server-side filtering, no fluff)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Stefan Aichholzer", email = "theaichholzer@gmail.com" },
]
keywords = ["mcp", "vikunja", "model-context-protocol", "todo", "tasks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Utilities",
]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/aichholzer/altiplano"
Repository = "https://github.com/aichholzer/altiplano"
Issues = "https://github.com/aichholzer/altiplano/issues"

[project.scripts]
altiplano = "altiplano.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/altiplano"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]


